youtube link fix
fortnite rabies

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div>
             <h2>links to my stuff-</h2>
         <div class="button2">
-            <a href="https://www.youtube.com/@midii.">midii</a>
+            <a href="https://www.youtube.com/@midiinya">midii</a>
             <a href="https://www.youtube.com/@moremid">More Mid</a>
             <a href="https://www.youtube.com/@midiiLIVE">midiiLIVE</a>
             <a href="https://pronouns.page/@midii">Pronouns.page</a>
