--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="description" content="Hello! welcome to my site! This site includes content about me, the things i do and more">
+    <meta name="description" content="this site includes everything you need to know about midii">
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="assets/midii.svg">
     <link rel="stylesheet" href="style.css">
@@ -14,6 +14,7 @@
     <a id="about">
     <a id="links">
     <a id="music">
+    <a id="business">
     <a id="edt">
     <a id="bear5">
     <a id="merch">
@@ -74,7 +75,9 @@
 
             <br><h2>about site-</h2>
 
-            <p>hold on im playing fnaf <img alt="" src="assets/image13.webp"></img></p>
+            <p>this website was ported over from my carrd, with the help of Fazzoc (pls add more info here later lol)</p>
+                <br>site version: 0.40
+            </p>
 
             </div>
     </section>
@@ -130,6 +133,20 @@
             </tr>
         </table> 
         </div>
+    </section>
+
+    <section id="business">
+        <div>
+            <h2>business related stuff-</h2>
+
+            <p>contact me at midiinya@gmail.com for business purposes
+            </p>
+
+            <p> refund policy:
+            <br> midii or EDTstudio cannot provide refunds on any purchases which do not include physical products.
+            </p>
+
+            </div>
     </section>
 
     <section id="edt">
