--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <a href="#about">About</a>
             <a href="#links">Links</a>
             <a href="#music">Music</a>
+            <a href="#business">Business</a>
             <a href="#edt">EDTstudio</a>
         </ul> 
        
