added svg icons to links page

--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
         <div>
             <h2>links to my stuff-</h2>
         <div class="button2">
-            <a href="https://www.youtube.com/@midiinya">midii</a>
-            <a href="https://www.youtube.com/@moremid">More Mid</a>
-            <a href="https://www.youtube.com/@midiiLIVE">midiiLIVE</a>
-            <a href="https://pronouns.page/@midii">Pronouns.page</a>
-            <a href="https://www.twitch.tv/midiinya">Twitch</a>
-            <a href="https://www.reddit.com/user/midiinya">Reddit</a>
-            <a href="https://ko-fi.com/midiinya">Ko-fi</a>
-            <a href="https://open.spotify.com/artist/6ENevJ3PjtaUSoXayQGUvi">Spotify</a>
-            <a href="https://soundcloud.com/midiinya">Soundcloud</a>
-            <a href="https://gamebanana.com/members/1912000">GameBanana</a>
-            <a href="https://midii.newgrounds.com">Newgrounds</a>
-            <a href="https://steamcommunity.com/id/midiinya">Steam</a>
-            <a href="https://www.roblox.com/users/116168381/profile">Roblox</a>
+            <a href="https://www.youtube.com/@midiinya"><img src="assets/YouTube.svg">midii</a>
+            <a href="https://www.youtube.com/@moremid"><img src="assets/YouTube.svg">More Mid</a>
+            <a href="https://www.youtube.com/@midiiLIVE"><img src="assets/YouTube.svg">midiiLIVE</a>
+            <a href="https://pronouns.page/@midii"><img src="assets/PronounsPage.svg">Pronouns.page</a>
+            <a href="https://www.twitch.tv/midiinya"><img src="assets/twitch.svg">Twitch</a>
+            <a href="https://www.reddit.com/user/midiinya"><img src="assets/reddit.svg">Reddit</a>
+            <a href="https://ko-fi.com/midiinya"><img src="assets/ko-fi.svg">Ko-fi</a>
+            <a href="https://open.spotify.com/artist/6ENevJ3PjtaUSoXayQGUvi"><img src="assets/spotify.svg">Spotify</a>
+            <a href="https://soundcloud.com/midiinya"><img src="assets/soundcloud.svg">Soundcloud</a>
+            <a href="https://gamebanana.com/members/1912000"><img src="assets/gamebanana.svg">GameBanana</a>
+            <a href="https://midii.newgrounds.com"><img src="assets/newgrounds.svg">Newgrounds</a>
+            <a href="https://steamcommunity.com/id/midiinya"><img src="assets/steam.svg">Steam</a>
+            <a href="https://www.roblox.com/users/116168381/profile"><img src="assets/roblox.svg">Roblox</a>
         </div>
             <p>my discord server & bandcamp site are in the <a href="#edt">EDTstudio section</a>
             </p>
