--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
             <h2>albums & EPs:<h2>
          <h2 style="text-align: center;">none yet</h2>
             <div style="text-align: center;">
-            <br><h3>stickwavez</h3>
+            <h3>singles:<h3>
+                <h3>stickwavez</h3>
                     <a href="https://open.spotify.com/album/4O1ziiQ8Ws7zDc0Pp4XKD2"><img alt="" src="assets/image04.webp" class="covers"></a>
                 <h3>aporia</h3>
                     <a href="https://open.spotify.com/album/1gKgm4zsXIZEOLqkYs9siy"><img alt="" src="assets/image02.webp" class="covers"></a>
