--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property=’og:image’ content="site.webp" />
     <meta name="description" content="this site includes everything you need to know about midii">
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="assets/midii.svg">
