hope that makes it work

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta property=’og:image’ content="site.webp" />
+    <meta property=’og:image’ content="assets/site.jpg" />
     <meta name="description" content="this site includes everything you need to know about midii">
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="assets/midii.svg">
@@ -67,6 +67,7 @@
         <p>i love synthwave, my favorite artists/bands are:
         <br>Forêt de Vin, Gunship, The Midnight, Carpenter Brut, The Strike
         </p>
+        <p>my email is midiinya@gmail.com if you wish to contact me or somethin</p>
         <p>Mae is the best Fortnite skin</p>
     <br>
         <h2>about site-</h2>
