bandcamp links instead of spotify

--- a/index.html
+++ b/index.html
@@ -107,17 +107,17 @@
             <div style="text-align: center;">
             <h3>singles:<h3>
                 <h3>stickwavez</h3>
-                    <a href="https://open.spotify.com/album/4O1ziiQ8Ws7zDc0Pp4XKD2"><img alt="" src="assets/image04.webp" class="covers"></a>
+                    <a href="https://edtstudio.bandcamp.com/album/stickwavez-legacy"><img alt="" src="assets/image04.webp" class="covers"></a>
                 <h3>aporia</h3>
-                    <a href="https://open.spotify.com/album/1gKgm4zsXIZEOLqkYs9siy"><img alt="" src="assets/image02.webp" class="covers"></a>
+                    <a href="https://edtstudio.bandcamp.com/track/aporia"><img alt="" src="assets/image02.webp" class="covers"></a>
             <br><h3>chem</h3>
-                    <a href="https://open.spotify.com/album/3hrI1O6gP9lnVDV3aOml9C"><img alt="" src="assets/image03.webp" class="covers"></a>
+                    <a href="https://edtstudio.bandcamp.com/album/chem"><img alt="" src="assets/image03.webp" class="covers"></a>
                 <h3>california corndog 강남스타일 게이밍</h3>
-                    <a href="https://soundcloud.com/midiinya/californiacorndog"><img alt="" src="assets/image05.webp" class="covers"></a>
+                    <a href="https://edtstudio.bandcamp.com/track/california-corndog"><img alt="" src="assets/image05.webp" class="covers"></a>
             <br><h3>crystalCoda</h3>
-                    <a href="https://open.spotify.com/album/4qTDY2uH73gi5Y5Vx5Lfrl"><img alt="" src="assets/image02.webp" class="covers"></a>
+                    <a href="https://edtstudio.bandcamp.com/track/crystalcoda"><img alt="" src="assets/image02.webp" class="covers"></a>
                 <h3>insight</h3>
-                    <a href="https://open.spotify.com/album/2KmRtzxgvZHCWAxZZ6t5rj"><img alt="" src="assets/image02.webp" class="covers"></a>             
+                    <a href="https://edtstudio.bandcamp.com/track/insight"><img alt="" src="assets/image02.webp" class="covers"></a>             
         </div>
     </div>
     </section>
