--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta property=’og:image’ content="assets/site.jpg" />
+    <meta property=’og:image’ content="assets/site.jpg"/>
+    <meta property="og:image:type" content="image/jpeg"/>
+    <meta property="og:image:width" content="1280"/>
+    <meta property="og:image:height" content="800"/>
     <meta name="description" content="this site includes everything you need to know about midii">
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="assets/midii.svg">
