--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta property=’og:image’ content="assets/site.jpg"/>
+    <meta property="og:image" content="assets/site.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1280"/>
     <meta property="og:image:height" content="800"/>
