--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <title>midii's website</title>
     <meta charset="UTF-8">
+    <meta property="og:title" content="midii's website">
     <meta name="author" content="midii">
+    <meta name="description" content="this site includes everything you need to know about midii">
     <meta property="og:image" content="assets/thumbnail.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1280"/>
     <meta property="og:image:height" content="800"/>
-    <meta name="description" content="this site includes everything you need to know about midii">
-    <meta property="og:title" content="midii's website">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
     <link rel="icon" href="assets/midii.svg">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="advanced_stuff.js"></script>
 </head>
 <body>
