--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <section id="edt">
         <div>
             <h2>EDTstudio-</h2>
-            <img alt="" src="assets/image06.webp" style="width: 250px;">
+            <img alt="" src="assets/EDTstudio.webp" style="width: 250px;">
             <p>EDTstudio (Epic Dump Trucks studio) is a studio i own along with <a href="https://linktr.ee/Fazzoc">Fazzoc</a> and <a href="https://www.youtube.com/@DuskDragonNight75">DuskDN75</a>
         <div class="button2">
             <a href="https://epicdumptrucks.carrd.co/" class="button1"><img src="assets/carrd.svg">EDTstudio Carrd</a>
@@ -153,7 +153,7 @@
      <section id="merch">
         <div>
             <p>surely you jestin</p>
-            <img alt="honk honk! :)" src="assets/image25.webp" style=" width:54vh; border-radius: 0.5rem; display: block; margin: auto;">
+            <img alt="honk honk! :)" src="assets/honk.webp" style=" width:54vh; border-radius: 0.5rem; display: block; margin: auto;">
         </div>
      </section>
 
