layout shift fix

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
         
-    <section id="start" style="background-color: black;">
+    <section id="start" style="position: absolute; background-color: black;">
         <a href="#about"><img alt="midii logo" src="assets/midii.svg" class="logo"></a>
     </section>    
 
