site rework 2.5 1st part of redoing the button code, moving to inline-flex for better bersatility + some more cleanup of redundant code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta property="og:title" content="midii's website">
     <meta name="author" content="midii & Fazzoc">
     <meta name="description" content="this site includes everything you need to know about midii">
-    <meta property="twitter:card" content="summary_large_image" />
     <meta property="og:image" content="assets/thumbnail.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1280"/>
@@ -35,13 +34,13 @@
 
     <p class="midii">midii<br>WORK IN PROGRESS</p>
 
-    <ul class="navbar">
+    <nav class="navbar">
         <a href="#about">About</a>
         <a href="#links">Links</a>
         <a href="#music">Music</a>
         <a href="#business">Business</a>
-        <br><a href="#edt">EDTstudio</a>
-    </ul> 
+        <a href="#edt">EDTstudio</a>
+    </nav> 
 
     <ul class="button1">
         <a href="#start">◀ back</a> 
@@ -69,7 +68,7 @@
     <br>
         <h2>about site-</h2>
         <p>this website was rebuilt over from my carrd, with the help of Fazzoc (pls add more info here later lol)</p>
-        <br>site version: 0.60
+        <br>site version: 0.65
         </p>
     </div>
     </section>
