--- a/index.html
+++ b/index.html
@@ -77,12 +77,13 @@
     <div>
         <h2>links to my stuff-</h2>
     <div class="button2">
-        <a href="https://www.youtube.com/@midiinya"><img src="assets/YouTube.svg">midii</a>
-        <a href="https://www.youtube.com/@moremid"><img src="assets/YouTube.svg">More Mid</a>
-        <a href="https://www.youtube.com/@midiiLIVE"><img src="assets/YouTube.svg">midiiLIVE</a>
+        <a href="https://www.youtube.com/@midiinya"><img src="assets/youtube.svg">midii</a>
+        <a href="https://www.youtube.com/@moremid"><img src="assets/youtube.svg">More Mid</a>
+        <a href="https://www.youtube.com/@midiiLIVE"><img src="assets/youtube.svg">midiiLIVE</a>
         <a href="https://pronouns.page/@midii"><img src="assets/PronounsPage.svg">Pronouns.page</a>
         <a href="https://www.twitch.tv/midiinya"><img src="assets/twitch.svg">Twitch</a>
         <a href="https://www.reddit.com/user/midiinya"><img src="assets/reddit.svg">Reddit</a>
+        <a href="https://midiinya.bsky.social"><img src="assets/bsky.svg">Bsky</a>
         <a href="https://ko-fi.com/midiinya"><img src="assets/ko-fi.svg">Ko-fi</a>
         <a href="https://open.spotify.com/artist/6ENevJ3PjtaUSoXayQGUvi"><img src="assets/spotify.svg">Spotify</a>
         <a href="https://soundcloud.com/midiinya"><img src="assets/soundcloud.svg">Soundcloud</a>
