--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
         <br>my username is midii / midiinya, my real name is Natalie
         <br>my pronouns are she/her
     </p>
-        <p>im Norwegian (living in Norway), half Thai, trans female, 16, bisexual, polyamorous, taken
+        <p>im Norwegian (living in Norway), half Thai (i dont speak it though),
+        <br>trans female, 16, autistic, bisexual, polyamorous, taken
         <br>i have autism
-        <br>i like playing games or just doing silly shit with my friends and making youtube videos and/or
-        <br>streaming on twitch
-        <br>im also a pngtuber :3
+        <br>i like playing games or just doing silly shit with my friends
+        <br>i make youtube videos and i stream on twitch
+        <br>im also a pngtuber :3 (i wanna become a vtuber one day)
         <br>i make music (usually bitcrushed synthwave)
         <br>and i edit videos (i probably wont edit for anyone else cuz im too busy with my own stuff)
     </p>
@@ -67,8 +68,9 @@
         <p>Mae is the best Fortnite skin</p>
     <br>
         <h2>about site-</h2>
-        <p>this website was rebuilt over from my carrd, with the help of Fazzoc (pls add more info here later lol)</p>
-        <br>site version: 0.65
+        <p>this website was rebuilt from my carrd with the help of Fazzoc,
+        <br>including some extra stuff in it as well! (wip)</p>
+        <br>site version: 0.66
         </p>
     </div>
     </section>
@@ -115,6 +117,7 @@
                 <h3>crystalCoda</h3>
                     <a href="https://edtstudio.bandcamp.com/track/crystalcoda"><img src="assets/cover1.webp" class="cover rotateL"></a>
                 <h3>insight</h3>
+                <p>(this is the song that was made for this website!)</p>
                     <a href="https://edtstudio.bandcamp.com/track/insight"><img src="assets/cover1.webp" class="cover rotateR"></a>             
                 <p>more coming soon!</p>
             </div>
@@ -138,7 +141,7 @@
         <div>
             <h2>EDTstudio-</h2>
             <img alt="" src="assets/EDTstudio.webp" style="width: 250px;">
-            <p>EDTstudio (Epic Dump Trucks studio) is a studio i own along with <a href="https://linktr.ee/Fazzoc">Fazzoc</a> and <a href="https://www.youtube.com/@DuskDragonNight75">DuskDN75</a>
+            <p>EDTstudio (Epic Dump Trucks studio) is a studio i own along with <a href="https://www.youtube.com/@DuskDragonNight75">DuskDN75</a> and <a href="https://linktr.ee/Fazzoc">Fazzoc</a>
         <div class="button2">
             <a href="https://epicdumptrucks.carrd.co/" class="button1"><img src="assets/carrd.svg">EDTstudio Carrd</a>
         </div>
