goddammit i swear i removed that + maybe

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
     </p>
         <p>im Norwegian (living in Norway), half Thai (i dont speak it though),
         <br>trans female, 16, autistic, bisexual, polyamorous, taken
-        <br>i have autism
         <br>i like playing games or just doing silly shit with my friends
         <br>i make youtube videos and i stream on twitch
         <br>im also a pngtuber :3 (i wanna become a vtuber one day)
@@ -116,8 +115,8 @@
                     <a href="https://edtstudio.bandcamp.com/track/california-corndog"><img src="assets/cali_corndog.webp" class="cover rotateR"></a>
                 <h3>crystalCoda</h3>
                     <a href="https://edtstudio.bandcamp.com/track/crystalcoda"><img src="assets/cover1.webp" class="cover rotateL"></a>
-                <h3>insight</h3>
-                <p>(this is the song that was made for this website!)</p>
+                <h3>insight
+                <br>(this is the song that was made for this website!)</h3>
                     <a href="https://edtstudio.bandcamp.com/track/insight"><img src="assets/cover1.webp" class="cover rotateR"></a>             
                 <p>more coming soon!</p>
             </div>
