add fade in when opening site, change logo scaling

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2>about site-</h2>
         <p>this website was reworked from my carrd with the help of Fazzoc,
         <br>including some extra stuff in it as well! (wip)</p>
-        <br>site version: 0.69 (nice)
+        <br>site version: 0.70
         </p>
     </div>
     </section>
