--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="midii's website">
     <meta name="author" content="midii & Fazzoc">
-    <meta name="description" content="this site includes everything you need to know about midii">
+    <meta name="description" content="this site includes links and everything you need to know about midii">
     <meta property="og:image" content="assets/thumbnail.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1280"/>
