quick update teehee

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     </p>
         <p>i love synthwave, my favorite artists/bands are:
         <br>Forêt de Vin, Gunship, The Midnight, Carpenter Brut, The Strike
-        </p>
+    </p>
+        <p>my favorite content creator is SMii7Y, his videos are hilarious and are my biggest inspiration
+    </p>
         <p>Mae is the best Fortnite skin</p>
     <br>
         <h2>about site-</h2>
