--- a/index.html
+++ b/index.html
@@ -89,14 +89,13 @@
         <a href="https://midiinya.bsky.social"><img src="assets/bsky.svg">Bsky</a>
         <a href="https://ko-fi.com/midiinya"><img src="assets/ko-fi.svg">Ko-fi</a>
         <a href="https://open.spotify.com/artist/6ENevJ3PjtaUSoXayQGUvi"><img src="assets/spotify.svg">Spotify</a>
+        <a href="https://midii.bandcamp.com"><img src="">Bandcamp</a>
         <a href="https://soundcloud.com/midiinya"><img src="assets/soundcloud.svg">Soundcloud</a>
         <a href="https://gamebanana.com/members/1912000"><img src="assets/gamebanana.svg">GameBanana</a>
         <a href="https://midii.newgrounds.com"><img src="assets/newgrounds.svg">Newgrounds</a>
         <a href="https://steamcommunity.com/id/midiinya"><img src="assets/steam.svg">Steam</a>
         <a href="https://www.roblox.com/users/116168381/profile"><img src="assets/roblox.svg">Roblox</a>
-    </div>
-        <p>my discord server & bandcamp site are in the <a href="#edt">EDTstudio section</a>
-        </p>
+        <a href="https://discord.gg/n57dwsB"><img src="">Discord Server</a>
     </div>
     </section>
 
@@ -108,18 +107,17 @@
          <h3>singles:<h3>
             <div style="text-align: center;">
                 <h3>stickwavez</h3>
-                    <a href="https://edtstudio.bandcamp.com/album/stickwavez-legacy"><img src="assets/stickwavez.webp" class="cover rotateL"></a>
+                    <a href="https://midii.bandcamp.com/album/stickwavez-legacy"><img src="assets/stickwavez.webp" class="cover rotateL"></a>
                 <h3>aporia</h3>
-                    <a href="https://edtstudio.bandcamp.com/track/aporia"><img src="assets/cover1.webp" class="cover rotateR"></a>
+                    <a href="https://open.spotify.com/album/1gKgm4zsXIZEOLqkYs9siy"><img src="assets/cover1.webp" class="cover rotateR"></a>
                 <h3>chem</h3>
-                    <a href="https://edtstudio.bandcamp.com/album/chem"><img src="assets/PEAK.webp" class="cover rotateL"></a>
+                    <a href="https://midii.bandcamp.com/album/chem"><img src="assets/PEAK.webp" class="cover rotateL"></a>
                 <h3>california corndog 강남스타일 게이밍</h3>
-                    <a href="https://edtstudio.bandcamp.com/track/california-corndog"><img src="assets/cali_corndog.webp" class="cover rotateR"></a>
+                    <a href="https://midii.bandcamp.com/track/california-corndog"><img src="assets/cali_corndog.webp" class="cover rotateR"></a>
                 <h3>crystalCoda</h3>
-                    <a href="https://edtstudio.bandcamp.com/track/crystalcoda"><img src="assets/cover1.webp" class="cover rotateL"></a>
+                    <a href="https://midii.bandcamp.com/track/crystalcoda"><img src="assets/cover1.webp" class="cover rotateL"></a>
                 <h3>insight
-                <br>(this is the song that was made for this website!)</h3>
-                    <a href="https://edtstudio.bandcamp.com/track/insight"><img src="assets/cover1.webp" class="cover rotateR"></a>             
+                    <a href="https://midii.bandcamp.com/track/insight"><img src="assets/cover1.webp" class="cover rotateR"></a>             
                 <p>more coming soon!</p>
             </div>
     </div>
