--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
+    <div id="snowflakeContainer"><span class="snowflake"></span></div>
         
     <section id="start" style="position: absolute; background-color: black;">
         <a href="#about"><img alt="midii logo" src="assets/midii.svg" class="logo"></a>
