--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <br>including some extra stuff in it as well! (wip)</p>
         <br>site version: 0.70
         </p>
+    <p>Credits to <a href="https://www.kirupa.com/html5/the_falling_snow_effect.htm">kirupa for creating the snow falling code</a></p>
     </div>
     </section>
 
