just some small fixes and changes lol

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <br>my pronouns are she/her
     </p>
         <p>im Norwegian (living in Norway), half Thai (i dont speak it though),
-        <br>trans female, 16, autistic, bisexual, polyamorous, taken
+        <br>trans female, 16, autistic, bisexual, taken
         <br>i like playing games or just doing silly shit with my friends
         <br>i make youtube videos and i stream on twitch
         <br>im also a pngtuber :3 (i wanna become a vtuber one day)
@@ -73,9 +73,9 @@
         <h2>about site-</h2>
         <p>this website was reworked from my carrd with the help of Fazzoc,
         <br>including some extra stuff in it as well! (wip)</p>
-        <br>site version: 0.70
+        <br>site version: 0.70.1
         </p>
-    <p>Credits to <a href="https://www.kirupa.com/html5/the_falling_snow_effect.htm">kirupa for creating the snow falling code</a></p>
+    <p>credits to <a href="https://www.kirupa.com/html5/the_falling_snow_effect.htm">kirupa for creating the snow falling code</a></p>
     </div>
     </section>
 
@@ -119,7 +119,7 @@
                     <a href="https://midii.bandcamp.com/track/california-corndog"><img src="assets/cali_corndog.webp" class="cover rotateR"></a>
                 <h3>crystalCoda</h3>
                     <a href="https://midii.bandcamp.com/track/crystalcoda"><img src="assets/cover1.webp" class="cover rotateL"></a>
-                <h3>insight
+                <h3>insight</h3>
                     <a href="https://midii.bandcamp.com/track/insight"><img src="assets/cover1.webp" class="cover rotateR"></a>             
                 <p>more coming soon!</p>
             </div>
