--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 <body>
 
-    <section id="start" style="position: fixed; background-color: black;">
+    <section id="start" style="position: absolute; background-color: black;">
         <a href="#about"><img alt="midii logo" src="assets/midii.svg" class="logo"></a>
     </section>
 
-    <section id="bear5" style="position: fixed; background-color: black;">
+    <section id="bear5" style="position: absolute; background-color: black;">
         <div>
             <img src="assets/bear5.webp"> <img src="assets/bear5.webp">
             <img src="assets/bear5.webp"> <img src="assets/bear5.webp">
