--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
         <br>my pronouns are she/her
     </p>
         <p>im Norwegian (living in Norway), half Thai (i dont speak it though),
-        <br>trans female, 16, autistic, bisexual, taken
+        <br>trans female, 16, autistic, bisexual
         <br>i like playing games or just doing silly shit with my friends
         <br>i make youtube videos and i stream on twitch
         <br>im also a pngtuber :3 (i wanna become a vtuber one day)
         <br>i make music (usually bitcrushed synthwave)
         <br>and i edit videos (i probably wont edit for anyone else cuz im too busy with my own stuff)
     </p>
-        <p>i love synthwave, my favorite artists/bands are:
+        <p>i love synthwave music, my favorite artists/bands are:
         <br>Forêt de Vin, Gunship, The Midnight, Carpenter Brut, The Strike
     </p>
         <p>my favorite content creator is SMii7Y, his videos are hilarious and are my biggest inspiration
