--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <br>my pronouns are she/her
     </p>
         <p>im Norwegian (living in Norway), half Thai (i dont speak it though),
-        <br>trans female, 16, autistic, bisexual
+        <br>trans female, 16, autistic, lesbian
         <br>i like playing games or just doing silly shit with my friends
         <br>i make youtube videos and i stream on twitch
         <br>im also a pngtuber :3 (i wanna become a vtuber one day)
