--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#about"><img alt="midii logo" src="assets/midii.svg" class="logo"></a>
     </section>
 
-    <section id="bear5" style="position: absolute; width: 80vw; background-color: black;">
+    <section id="bear5" style="position: absolute; background-color: black;">
         <div>
             <img src="assets/bear5.webp"> <img src="assets/bear5.webp">
             <img src="assets/bear5.webp"> <img src="assets/bear5.webp">
@@ -71,7 +71,7 @@
         <h2>about site-</h2>
         <p>this website was rebuilt from the ground up from my carrd with the help of Fazzoc,
         <br>including some extra stuff as well (wip)</p>
-        <br>site version: 0.80
+        <br>site version: 0.81
         </p>
     </div>
     </section>
