formatting changes, cleanup, more stable page switching, logo change

--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
 </head>
 <body>
 
-    <section id="start" style="position: fixed; background-color: black;">
-        <a href="#about"><img alt="midii logo" src="assets/midii.svg" class="logo"></a>
-    </section>
-
-    <section id="bear5" style="position: absolute; width: 80vw; background-color: black;">
+    <section id="bear5" style="position: absolute; background-color: black;">
         <div>
             <img src="assets/bear5.webp"> <img src="assets/bear5.webp">
             <img src="assets/bear5.webp"> <img src="assets/bear5.webp">
@@ -30,6 +26,10 @@
                 <a href="#about">◀ back</a> 
             </ul>
         </div>
+    </section>
+
+    <section id="start" style="position: fixed; background-color: black;">
+        <a href="#about"><img alt="midii logo" src="assets/midii.svg" class="logo"></a>
     </section>
 
     <p class="midii">midii<br>WORK IN PROGRESS</p>
@@ -71,7 +71,7 @@
         <h2>about site-</h2>
         <p>this website was rebuilt from the ground up from my carrd with the help of Fazzoc,
         <br>including some extra stuff as well (wip)</p>
-        <br>site version: 0.80
+        <br>site version: 0.81
         </p>
     </div>
     </section>
@@ -167,6 +167,6 @@
     </button>
     </div>
     
-<script src="advanced_stuff.js"></script>
+<script src="advanced_stuff.js" defer></script>
 </body>
 </html>
