woahh a lot of update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="midii's website">
     <meta name="author" content="midii & Fazzoc">
     <meta name="description" content="this site includes links and everything you need to know about midii">
-    <meta property="og:image" content="assets/thumbnail.jpg"/>
+    <meta property="og:image" content="assets/thumbtwo.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1280"/>
     <meta property="og:image:height" content="800"/>
@@ -32,7 +32,9 @@
         <a href="#about"><img alt="midii logo" src="assets/midii.svg" class="logo"></a>
     </section>
 
-    <p class="midii">midii<br>WORK IN PROGRESS</p>
+    <p class="midii">
+        <img alt="midii" src="assets/textlogo.png" style="width: 200px">
+        <br>WORK IN PROGRESS</p>
 
     <nav class="navbar">
         <a href="#about">About</a>
@@ -54,24 +56,18 @@
         <br>my pronouns are she/her
     </p>
         <p>im Norwegian (living in Norway), half Thai (i dont speak it though),
-        <br>trans female, 16, autistic, lesbian
+        <br>trans female, 17, autistic, lesbian, taken
         <br>i like playing games or just doing silly shit with my friends
         <br>i make youtube videos and i stream on twitch
         <br>im also a pngtuber :3 (i wanna become a vtuber one day)
-        <br>i make music (usually bitcrushed synthwave)
-        <br>and i edit videos (i probably wont edit for anyone else cuz im too busy with my own stuff)
-    </p>
-        <p>i love synthwave music, my favorite artists/bands are:
-        <br>Forêt de Vin, Gunship, The Midnight, Carpenter Brut, The Strike
-    </p>
-        <p>my favorite content creator is SMii7Y, his videos are hilarious and are my biggest inspiration
+        <br>im an artist, musician, and video editor
     </p>
         <p>Mae is the best Fortnite skin</p>
     <br>
         <h2>about site-</h2>
         <p>this website was rebuilt from the ground up from my carrd with the help of Fazzoc,
         <br>including some extra stuff as well (wip)</p>
-        <br>site version: 0.81
+        <br>site version: 0.82
         </p>
     </div>
     </section>
@@ -88,7 +84,6 @@
         <a href="https://www.reddit.com/user/midiinya"><img src="assets/reddit.svg">Reddit</a>
         <a href="https://midiinya.bsky.social"><img src="assets/bsky.svg">Bsky</a>
         <a href="https://ko-fi.com/midiinya"><img src="assets/ko-fi.svg">Ko-fi</a>
-        <a href="https://open.spotify.com/artist/6ENevJ3PjtaUSoXayQGUvi"><img src="assets/spotify.svg">Spotify</a>
         <a href="https://midii.bandcamp.com"><img src="assets/bandcamp.svg">Bandcamp</a>
         <a href="https://gamebanana.com/members/1912000"><img src="assets/gamebanana.svg">GameBanana</a>
         <a href="https://midii.newgrounds.com"><img src="assets/newgrounds.svg">Newgrounds</a>
@@ -106,17 +101,16 @@
             <h3>singles:<h3>
         <div class="cover-grid">
             <h3>stickwavez</h3>
-            <h3>aporia</h3>
-                <a href="https://midii.bandcamp.com/album/stickwavez-legacy"><img src="assets/stickwavez.webp" class="cover rotateL"></a>
-                <a href="https://open.spotify.com/album/1gKgm4zsXIZEOLqkYs9siy"><img src="assets/cover1.webp" class="cover rotateR"></a>
             <h3>chem</h3>
+                <a href="https://midii.bandcamp.com/album/stickwavez-legacy"><img src="assets/stickwavez.webp" class="cover rotateL"></a>
+                <a href="https://midii.bandcamp.com/album/chem"><img src="assets/PEAK.webp" class="cover rotateR"></a>
             <h3>california corndog 강남스타일 게이밍</h3>
-                <a href="https://midii.bandcamp.com/album/chem"><img src="assets/PEAK.webp" class="cover rotateL"></a>
-                <a href="https://midii.bandcamp.com/track/california-corndog"><img src="assets/cali_corndog.webp" class="cover rotateR"></a>
             <h3>crystalCoda</h3>
+                <a href="https://midii.bandcamp.com/track/california-corndog"><img src="assets/cali_corndog.webp" class="cover rotateL"></a>
+                <a href="https://midii.bandcamp.com/track/crystalcoda"><img src="assets/cover1.webp" class="cover rotateR"></a>
             <h3>insight</h3>
-                <a href="https://midii.bandcamp.com/track/crystalcoda"><img src="assets/cover1.webp" class="cover rotateL"></a>
-                <a href="https://midii.bandcamp.com/track/insight"><img src="assets/cover1.webp" class="cover rotateR"></a>
+            <br>
+                <a href="https://midii.bandcamp.com/track/insight"><img src="assets/cover1.webp" class="cover rotateL"></a>
         </div>
             <p style="text-align: center;">more coming soon!</p>
         </div>
